<resources>
    <string name="app_name">Layouts</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>

    <string name="select_eat">Выберите еду:</string>
    <string name="question">С собой?</string>
    <string name="checkbox1">Воппер</string>
    <string name="checkbox2">Картошка фри</string>
    <string name="checkbox3">Пепси/Фанта/Спрайт</string>
    <string name="checkbox4">Соус</string>
    <string name="checkbox5">Десерт</string>

    <string name="text_for_name">Заполните поля:</string>
    <string name="f_n">Ваше имя</string>
    <string name="l_n">Ваша Фамилия</string>
    <string name="done">Готово!</string>

    <string name="button_scroll">Широкая кнопка</string>
    <string name="title">Dead Pool</string>
    <string name="description">
        Дэдпул (Deadpool) его настоящее имя Уэйд Уинстон Уилсон - вымышленный персонаж, антигерой из вселенной Marvel Comics, созданный художником Робом Лайфилдом и писателем Фабианом Нициезой и впервые появился в комиксе "The New Mutants" #98 (февраль 1991 года).
        Он получил прозвище "Болтливый наёмник", Дэдпул - оснащённый по последнему слову техники боец, широко известный среди фанатов своими остротами, «крутостью» и чёрным юмором. Как и Росомаха из Людей Икс, Дэдпул был подвергнут опытам по программе «Оружие Икс». После того как учёные попытались исцелить его рак, привив его клеткам способность к регенерации, Дэдпул остался изуродованным и психически нестабильным. Первоначально появившись, как и множество других персонажей, в основной Вселенной Marvel, он впоследствии получил альтернативные варианты, существующие в других реальностях Мультивселенной, в том числе в «Эре Апокалипсиса» и Ultimate-вселенной.
        Изначально Дэдпул выступал как противник Новых Мутантов, а затем команды «Сила Икс», несмотря на любовь к Сирене из последней команды. В 1997 году герой получил собственную серию комиксов, ставшую известной за понимание главным героем того, что он является персонажем комикса. В 2002 году, после 69 номеров и смерти главного героя при взрыве, серия была заменена комиксом об Агенте Икс (англ. Agent X), в котором были те же второстепенные герои, и на протяжении всех 15 номеров Дэдпул упоминался. В последних номерах он вернулся, но комикс закончился в 2003 году. В мае 2004 года началась серия Cable Deadpool, в которой Дэдпул выступил в главных ролях вместе с антигероем-мутантом Кэйблом. Эта серия закончилась 50 номером, поскольку у Кэйбла началась своя новая серия. Летом 2008 года стартовала новая одиночная серия Дэдпула, а в 2009 году Дэдпул появился в фильме «Люди Икс: Начало. Росомаха»...
    </string>

</resources>
