<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.anstag.app.layouts.Main3Activity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_for_name"/>

    <EditText
        android:id="@+id/edit_text1"
        android:layout_below="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_n"/>

    <EditText
        android:id="@+id/edit_text2"
        android:layout_below="@+id/edit_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_n"/>

    <Button
        android:id="@+id/button1"
        android:layout_below="@+id/edit_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"/>

</RelativeLayout>
